--- a/public/views/navTemplate.html
+++ b/public/views/navTemplate.html
@@ -1,11 +1,10 @@
 <div class="nav-bar">
    <nav class="main-nav">
       <ul>
-         <li ui-sref="home"><p>Home</p></li>
-         <li ui-sref="hikenow"><p>HikeNow</p></li>
-         <li ui-sref="browse"><p>Browse</p></li>
-         <li ui-sref="educate"><p>Educate</p></li>
-         <li ui-sref="shop"><p>Shop</p></li>
+         <li ui-sref="home"><p>INSTA-HIKE</p></li>
+         <li ui-sref="explore"><p>EXPLORE</p></li>
+         <li ui-sref="prepare"><p>PREPARE</p></li>
+         <li ui-sref="shop"><p>SHOP</p></li>
          <li ui-sref="profile"><img src="../img/user-icon-100.png"></li>
       </ul>
    </nav>
