--- a/public/views/profile.html
+++ b/public/views/profile.html
@@ -1,4 +1,5 @@
 <div class="main-container">
    <h1>Profile</h1>
    <button ui-sref="hikeAdmin">Create a Hike</button>
+   <button ui-sref="login">LogIn</button>
 </div>
