--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,8 +1,10 @@
 <div class="main-container">
    <div>
-      <div>
-         <h1>Let's Hike</h1>
-         <h3>Find Your Adventure</h3>
+      <div class="billboard">
+         <div class="site-title">
+            <p>LET'S<span class="little"> GO </span>HIKE</p>
+            <h3>Find Your Adventure</h3>
+         </div>
       </div>
       <div>
          
