Added home page parallax functionality

--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -5,44 +5,51 @@ $medium-diff: #994;
 $hard-diff: #949;
 
 $hike-stat: #ccc;
-$hike-stat-desc: #aaa;
+$hike-stat-desc: #ccc;
+
+$dark-header: #29232D;
+
+$light-text: #ffe2e9;
+
+$heroHeight: 1080px;
+$layer: 10;
+$perspective: 1;
 
 body {
    font-family: 'Droid Serif', sans-serif;
 }
 
 h1 {
-   font-size: 40px;
-   font-family: 'Oswald', sans-serif;
+   font: 42px/50px 'Amatic SC', sans-serif;
+   font-weight: 500;
+   margin: 10px 0 20px 0;
 }
 
 h2 {
-   font-size: 28px;
+   font: 32px/42px 'Open Sans', sans-serif;
+   font-weight: 800;
+   text-transform: uppercase;
+   letter-spacing: 1px;
 }
 
 h3 {
-   font-family: 'Oswald', sans-serif;
-   text-transform: uppercase;
-   font-size: 32px;
-   font-weight: 700;
-   color: ghostwhite
+   font: 32px/38px 'Amatic SC', sans-serif;
+   color: ghostwhite;
 }
 
 h4 {
-   font-size: 16px;
-   font-weight: 700;
-   color: #eee;
+   font: 22px/28px 'Oswald', sans-serif;
 }
 
 h5 {
-   font-size: 14px;
-   font-style: italic;
-   padding-top: 5px;
-   color: #ccc;
+   font: 14px/18px 'Gentium Basic', serif;
+   text-transform: uppercase;
+   font-weight: 300px;
+   letter-spacing: 0.2em;
 }
 
 p {
-   font-size: 14px;
+   font: 18px/27px 'Gentium Basic', serif;
 }
 
 input, textarea {
@@ -78,23 +85,33 @@ input, textarea {
 }
 
 .nav-bar {
-   position: relative;
+   position: fixed;
    top: 0px;
    width: 100%;
    height: 80px;
-   background-color: #3F3637;
+   background-color: #212;
+
+   .left-nav{
+      position: absolute;
+      left: 30px;
+      top: 25px;
+      img{
+         height: 30px;
+      }
+   }
 }
 
 .main-nav {
    position: absolute;
    right: 30px;
+   font-family: 'Patua One', sans-serif;
    ul {
       list-style: none;
       li {
          display: inline-block;
          height: 80px;
          line-height: 80px;
-         padding: 0 10px;
+         padding: 0 15px;
          color: white;
          p {
             margin-top: 2px;
@@ -108,12 +125,75 @@ input, textarea {
 }
 
 .main-container {
-   padding: 30px 50px;
-   height: 100vh;
-   background-image: url('../img/salt-lake-back.jpg');
-   background-attachment: fixed;
-   background-repeat: no-repeat;
+   margin-top: 80px;
+   padding: 30px 15%;
+   min-height: 100vh;
+}
+
+.static-bg {
+   background: url('../img/sunset.jpg') no-repeat center center fixed;
+   -webkit-background-size: cover;
+   -moz-background-size: cover;
+   -o-background-size: cover;
    background-size: cover;
+}
+
+.hero {
+   height: 1080px;
+   overflow: hidden;
+   position: relative;
+}
+
+.layer {
+   background-position: bottom center;
+   background-size: auto;
+   background-repeat: no-repeat;
+	width: 100%;
+	height: $heroHeight;
+	position: fixed;
+	z-index: -1;
+}
+
+.hero, .layer {
+   min-height: 1080px;
+}
+
+.layer-bg {
+   background-image: url('./../img/parallax1.png');
+}
+
+.layer-1 {
+   background-image: url('./../img/parallax2.png');
+}
+
+.layer-2 {
+   background-image: url('./../img/parallax3.png');
+}
+
+.layer-3 {
+   background-image: url('./../img/parallax4.png');
+}
+
+.layer-4 {
+   background-image: url('./../img/parallax5.png');
+}
+
+.layer-5 {
+   background-image: url('./../img/parallax6.png');
+}
+
+.layer-6 {
+   background-image: url('./../img/parallax7.png');
+}
+
+.layer-7 {
+   background-image: url('./../img/parallax8.png');
+}
+
+
+.front-content {
+   background-color: #1E0E1D;
+   height: 1200px;
 }
 
 .login-container {
@@ -143,8 +223,12 @@ input, textarea {
    }
    .pre-text {
       text-align: left;
-      width: 60px;
+      width: 90px;
    }
+}
+
+.hdr-txt {
+   padding-bottom: 15px;
 }
 
 .hike-filter {
@@ -246,7 +330,7 @@ input, textarea {
       height: 600px;
       background-color: #599;
       .hike-title {
-         margin: 10px 0 0 10px;
+         padding: 10px 0 0 10px;
       }
       .hike-photos {
 
@@ -278,18 +362,45 @@ input, textarea {
    justify-content: space-between;
    width: 100%;
    height: 300px;
+   border-radius: 3px;
    
    .weather {
       flex: 0 0 300px;
       height: 300px;
-      background: #175;
+      background: #eee;
+      font-family: 'Lato', sans-serif;
+      text-align: center;
+      text-transform: uppercase;
+      border-radius: 2px;
+      .weather-today {
+         height: 150px
+      }
+
+      .high-temp {
+         color: #755;
+      }
+      .low-temp {
+         color: #557;
+      }
+
+      .weather-forecast {
+         text-align: center;
+         height: 120px;
+         .day-name {
+            color: #333;
+         }
+         .forecast-day {
+            display: inline-block;
+            width: 90px;
+         }
+      }
    }
 
    .summary {
       flex: 1 1 auto;
       padding: 5px 0 0 30px;
       height: 300px;
-      background: #665;
+      background: rgba(255, 255, 255, 0.3);
       p {
          padding-top: 10px;
          text-align: justify;
@@ -303,4 +414,64 @@ input, textarea {
    background: -webkit-linear-gradient(top,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
    background: linear-gradient(to bottom,  rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
+}
+
+.outer-review-box {
+   width: 100%;
+}
+
+.review-userimage {
+   width: 100px;
+   height: 100px;
+   background-color: #333;
+   border-radius: 50%;
+
+}
+
+.white-box {
+   width: calc(100%-30px);
+   padding: 10px 30px;
+   margin: 10px 0 20px 0;
+   background: rgba(255, 255, 255, 0.7);
+}
+
+.round-corners {
+   border-radius: 3px;
+}
+
+.review-image-box {
+   flex: 0 0 150px;
+   text-align: center;
+   font-family: '', sans-serif;
+}
+
+.review-text-box {
+   flex: 1 1 auto;
+   .header {
+      padding-bottom: 15px;
+      h4{
+         float: left;
+      }
+      p {
+         float: right;
+      }
+   }
+}
+
+.profile-box {
+   background: white;
+   border-radius: 2px;
+   margin: 0 auto;
+   width: 80%;
+   img{
+      width: 150px;
+   }
+}
+
+.text1 {
+   font-family: '', sans-serif;
+}
+
+.text2 {
+   font-family: '', sans-serif;
 }
