--- a/public/views/hikeDetails.html
+++ b/public/views/hikeDetails.html
@@ -28,12 +28,15 @@
          <div class="info-block">
             <p>MAP GOES HERE</p>
          </div>
+         <div class="info-block">
+            <p>SEND TO PHONE</p>
+         </div>
       </div>
    </div>
    <div class="hike-lower-info">
       <div class="weather">
-         <h4>Weather</h4>
-         <weather-dir></weather-dir>
+         <h4>Current Weather</h4>
+         <weather-dir info="hikeDetail"></weather-dir>
       </div>
       <div class="summary">
          <h4>Summary</h4>
@@ -41,7 +44,6 @@
       </div>
    </div>
    <div>
-      <h1>Reviews</h1>
-      
+      <review-dir></review-dir>
    </div>
 </div>
