--- a/public/views/home.html
+++ b/public/views/home.html
@@ -1,25 +1,14 @@
-<div class="main-container">
-   <div>
-      <div class="billboard">
-         <div class="site-title">
-            <p>LET'S<span class="little"> GO </span>HIKE</p>
-            <h3>Find Your Adventure</h3>
-         </div>
-      </div>
-      <div>
-         
-      </div>
-      
-   </div>
-   <div>
-      <div>
-         <h4 ui-sref="hikenow">Hike Now</h4>
-      </div>
-      <div>
-         <h4 ui-sref="browse">Browse Hikes</h4>
-      </div>
-   </div>
-
-
-   
+<div class="hero" parallax-dir>
+   <div class="layer-bg layer" data-depth="0.10" data-type="parallax"></div>
+   <div class="layer-1 layer" data-depth="0.20" data-type="parallax"></div>
+   <div class="layer-2 layer" data-depth="0.30" data-type="parallax"></div>
+   <div class="layer-3 layer" data-depth="0.40" data-type="parallax"></div>
+   <div class="layer-4 layer" data-depth="0.50" data-type="parallax"></div>
+   <div class="layer-5 layer" data-depth="0.60" data-type="parallax"></div>
+   <div class="layer-6 layer" data-depth="0.80" data-type="parallax"></div>
+   <div class="layer-7 layer" data-depth="0.90" data-type="parallax"></div>
 </div>
+<div class="front-content">
+   <p>Lorem ipsum and stuff</p>
+</div>
+
