--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -14,6 +14,7 @@ $light-text: #ffe2e9;
 $heroHeight: 1080px;
 $layer: 10;
 $perspective: 1;
+$dashedBorderColor: #665;
 
 body {
    font-family: 'Droid Serif', sans-serif;
@@ -48,6 +49,14 @@ h5 {
    letter-spacing: 0.2em;
 }
 
+h6 {
+   font: 14px/18px 'Open Sans', sans-serif;
+   text-transform: uppercase;
+   font-weight: 300px;
+   letter-spacing: 0.15em;
+   color: #eee;
+}
+
 p {
    font: 18px/27px 'Gentium Basic', serif;
 }
@@ -60,12 +69,21 @@ input, textarea {
 }
 
 .box{
-   margin: 10px;
+   margin: 7px 0 15px 0;
    border-radius: 2px;
 }
 
-.centered{
-   text-align: center;
+.light-line {
+   border: 0;
+   width: 95%;
+   border-top: 1px solid #a97;
+}
+
+.mid-caps{
+      font: 18px/24px 'Oswald', sans-serif;
+      letter-spacing: 0.05em;
+      text-transform: uppercase;
+      text-align: center;
 }
 
 .billboard {
@@ -90,6 +108,7 @@ input, textarea {
    width: 100%;
    height: 80px;
    background-color: #212;
+   z-index: 1;
 
    .left-nav{
       position: absolute;
@@ -110,12 +129,9 @@ input, textarea {
       li {
          display: inline-block;
          height: 80px;
-         line-height: 80px;
-         padding: 0 15px;
+         line-height: 81px;
+         padding: 0 13px;
          color: white;
-         p {
-            margin-top: 2px;
-         }
          img {
             height: 30px;
             vertical-align: middle;
@@ -131,7 +147,7 @@ input, textarea {
 }
 
 .static-bg {
-   background: url('../img/sunset.jpg') no-repeat center center fixed;
+   background: url('../img/explore-bg.jpg') no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
@@ -139,9 +155,21 @@ input, textarea {
 }
 
 .hero {
-   height: 1080px;
+   height: $heroHeight;
    overflow: hidden;
    position: relative;
+}
+
+.main-logo {
+   position: fixed;
+   text-align: center;
+   top: 14%;
+   left: 50%;
+   z-index: 0;
+   margin-left: -200px;
+   h3{
+      padding-top: 10px;
+   }
 }
 
 .layer {
@@ -232,36 +260,31 @@ input, textarea {
 }
 
 .hike-filter {
+   padding: 15px;
    background: rgba(255, 255, 255, 0.5);
 }
 
 .hike-card {
    position: relative;
-   background: rgba(0,0,0, 0.5);
+   background: rgba(120, 105, 85, 0.9);
+   color: #fff;
 
    .image-area {
-      flex: 1 1 auto;
+      flex: 0 0 255;
    }
 
    .primary-info {
-      flex: 1 1 30%;
-   }
-
-   .descript {
-      flex: 1 1 50%;
+      flex: 1 1 auto;
    }
 
    .key-image {
+      border: 2px dashed #bbb;
       width: 225px;
       height: 150px;
    }
    .pad-15 {
-      padding: 17px 0 14px 17px;
+      padding: 15px;
    }
-}
-
-.top-line {
-   padding-top: 10px;
 }
 
 .lower-line {
@@ -282,23 +305,6 @@ input, textarea {
    padding-top: 5px;
 }
 
-.fl-row {
-   display: flex;
-   flex-flow: row nowrap;
-}
-
-.between {
-   justify-content: space-between;
-}
-
-.around {
-   justify-content: space-around;
-}
-
-.fl-start {
-   align-items: flex-start;
-}
-
 .fl-r-b-s {
    display: flex;
    flex-flow: row nowrap;
@@ -316,6 +322,18 @@ input, textarea {
    display: flex;
    flex-flow: row nowrap;
    align-items: flex-start;
+}
+
+.search-filter{
+   display: flex;
+   flex-flow: row-nowrap;
+   justify-content: center;
+   div{
+      flex: 0 0 auto;
+      p {
+         margin-top: 7px;
+      }
+   }
 }
 
 .hike-billboard {
@@ -475,3 +493,36 @@ input, textarea {
 .text2 {
    font-family: '', sans-serif;
 }
+
+.centered {
+   width: 100%;
+   text-align: center;
+}
+
+.expandable {
+   display: flex;
+   width: 100%;
+   .filter-box{
+      margin: 10px 2%;
+      padding: 10px;
+      display: inline-block;
+      vertical-align: middle;
+      width: 30%;
+      height: 130px;
+      border: 1px dashed $dashedBorderColor;
+      .flex-holder {
+         display: flex;
+         flex-flow: row nowrap;
+         justify-content: space-between;
+         .flex-edge {
+            flex: 0 0 auto;
+         }
+      }
+   }
+}
+
+// .hike-search-results{
+//    height: 600px;
+//    overflow-y: auto;
+// }
+
