--- a/public/views/explore.html
+++ b/public/views/explore.html
@@ -1,30 +1,44 @@
-<div class="main-container">
+<div class="main-container static-bg">
    <h2>Explore All Hikes</h2>
    <div class="hike-filter box">
-      <label class="centered">Search by Name: <input placeholder="Hike Name" ng-model="searchName.name"/></label>
+      <div class="search-filter">
+         <div>
+            <p class="mid-caps">Search by Name:</p>
+         </div>
+         <div>
+            <input placeholder="Hike Name" ng-model="filter.name"/>
+         </div>
+      </div>
       <hr class="light-line">
-      <h4>Select Your Filters:</h4>
-      <div class="fl-r-a">
-         <div>
-            <h2>Difficulty</h2>
-            <h4>Easy: <input type="checkbox"/></h4>
-            <h4>Medium: <input type="checkbox"/></h4>
-            <h4>Hard: <input type="checkbox"/></h4>
+      <div expand-box>
+         <div class="centered"><h4>Advanced Filters</h4></div>
+      </div>
+      <div class="expandable">
+         <div class="filter-box">
+            <p class="mid-caps">Difficulty</p>
+            <div class="flex-holder"><div class="flex-edge"><p>Easy: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
+            <div class="flex-holder"><div class="flex-edge"><p>Medium: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
+            <div class="flex-holder"><div class="flex-edge"><p>Hard: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
+            <div class="flex-holder"><div class="flex-edge"><p>Strenuous: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
          </div>
-         <div>
-            <h2>Hike Length</h2>
-            <h4>0-2 Miles: <input type="checkbox"/></h4>
-            <h4>2-5 Miles: <input type="checkbox"/></h4>
-            <h4>5+  Miles: <input type="checkbox"/></h4>
+         <div class="filter-box">
+            <p class="mid-caps">Hike Length</p>
+            <div class="flex-holder"><div class="flex-edge"><p>0-2 Miles: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
+            <div class="flex-holder"><div class="flex-edge"><p>2-5 Miles: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
+            <div class="flex-holder"><div class="flex-edge"><p>5-8 Miles: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
+            <div class="flex-holder"><div class="flex-edge"><p>8 + Miles: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
          </div>
-         <div>
-            <h2>Features</h2>
-            <h4>Peak <input type="checkbox"/></h4>
-            <h4>Waterfall<input type="checkbox"/></h4>
-            <h4>Lake<input type="checkbox"/></h4>
+         <div class="filter-box">
+            <p class="mid-caps">Features</p>
+            <div class="flex-holder"><div class="flex-edge"><p>Peak: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
+            <div class="flex-holder"><div class="flex-edge"><p>Lake: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
+            <div class="flex-holder"><div class="flex-edge"><p>Waterfall: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
+            <div class="flex-holder"><div class="flex-edge"><p>City-side: </p></div><div class="flex-edge"><input type="checkbox" ng-model="filter.difficulty"/></div></div>
          </div>
       </div>
    </div>
-
-   <small-hike-dir></small-hike-dir>
+   <div class="hike-search-results">
+      <small-hike-dir></small-hike-dir>
+   </div>
+   
 </div>
