--- a/public/views/home.html
+++ b/public/views/home.html
@@ -8,7 +8,12 @@
    <div class="layer-6 layer" data-depth="0.80" data-type="parallax"></div>
    <div class="layer-7 layer" data-depth="0.90" data-type="parallax"></div>
 </div>
+<div class="main-logo" fade-out-dir>
+   <img src="./../img/logo.png"/>
+   <h3>- let's find a trail -</h3>
+</div>
 <div class="front-content">
+   <h2></h2>
    <p>Lorem ipsum and stuff</p>
 </div>
 
