--- a/public/views/explore.html
+++ b/public/views/explore.html
@@ -1,5 +1,5 @@
 <div class="main-container static-bg">
-   <h2>Explore All Hikes</h2>
+   <h2>Explore</h2>
    <div class="hike-filter box">
       <div class="search-filter">
          <div>
