--- a/public/views/home.html
+++ b/public/views/home.html
@@ -10,10 +10,40 @@
 </div>
 <div class="main-logo" fade-out-dir>
    <img src="./../img/logo.png"/>
-   <h3>- let's find a trail -</h3>
+   <h3>find the perfect trail and go</h3>
+   <p>scroll down to start</p>
+   <div class="floaty"><img src="./../img/down-arrow-tree.png"/></div>
 </div>
 <div class="front-content">
-   <h2></h2>
-   <p>Lorem ipsum and stuff</p>
+   <div class="main-info">
+       <p class="home-info-header">instahike helps you <span class="emphasis">find a trail</span> fast</p>  <!-- and sends directions to your phone -->
+      <p>Just answer a few simple questions...</p>
+      <div class="questions">
+         <div class="q-box">
+            <h2 class="number">1</h2>
+            <p>What kind of hike are you looking for?</p>
+            <select>
+               <option>Short and Sweet (0-2 Miles)</option>
+               <option>A Nice Mid-Range Thigh-Burner (2-5 Miles)</option>
+               <option>I'm Ready to Conquer a Mountain (5+ Miles)</option>
+            </select>
+         </div>
+         <div class="q-box">
+            <h2 class="number">2</h2>
+            <p>What is your preferred destination?</p>
+            <select>
+               <option>Waterfall</option>
+               <option>Lake</option>
+               <option>Peak</option>
+            </select>
+         </div>
+      </div>
+      <div>
+         <button>Find My Suggested Hike!</button>
+      </div>
+      <div>
+         <img class="rocks" src="./../img/rocks.jpg"/>
+      </div>
+   </div>
 </div>
 
